--- a/Quantum.ipynb
+++ b/Quantum.ipynb
@@ -40,7 +40,7 @@
     "Los estados básicos se denotan por $| \\hspace{0.1cm} 0 ... 0>$ , $| \\hspace{0.1cm} 0 ... 1>$ , $...$ , $| \\hspace{0.1cm} 1 ... 1>$ , entonces con $n$ qubits tenemos $2^{n}$ estados basicos, una base de n qubits es una base de $C$ elevado a la $2^{n}$. Cada estado básico corresponde a un vector de la base canónica de $C^{n^2}$ dado por \n",
     "\n",
     "\n",
-    "$\\left.\\begin{array}{c} | \\hspace{0.1cm} a_{(2,n)} > \\hspace{0.3cm} = \\begin{pmatrix}0\\\\.\\\\.\\\\.\\\\1\\\\.\\\\.\\\\.\\\\0\\end{pmatrix} \\leftarrow a  \\end{array}\\right\\rbrace 2^{n}$\n",
+    "$\\left.\\begin{array}{c} | \\hspace{0.1cm} a_{(2,n)} > \\hspace{0.3cm} = \\begin{pmatrix}0\\\\\\vdots\\\\0\\end{pmatrix} \\leftarrow a  \\end{array}\\right\\rbrace 2^{n}$\n",
     "\n",
     "La expresión binaria de la cantidad $a$ con $n$ bits corresponde al vector que tiene solo 1 y todos ceros con una base de $2^{n}$"
    ]
@@ -87,21 +87,6 @@
    "source": [
     "Min 32 "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
